修复单机充值中短代，充值卡渠道的bug

--- a/Client_SDK/m4399SingleOperateSDKDemo/project.properties
+++ b/Client_SDK/m4399SingleOperateSDKDemo/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../m4399RechargeSDK
+android.library.reference.1=..\\m4399RechargeSDK
